20240229 新增連結及頁面

--- a/cp3.htm
+++ b/cp3.htm
@@ -128,7 +128,7 @@
         <!-- breadcrumb路徑 end-->
         <div class="container">
           <!-- 左側 -->
-          <div class="left_block">
+          <div class="left_block hidden">
             <div class="leftblock_nodemenu">
               <div class="title">藥品</div>
               <ul>
@@ -187,101 +187,84 @@
           <!-- 主要內容區 -->
           <div class="center_block">
             <h2 class="title">藥品</h2>
-          <!-- function_panel -->
-          <div class="function_panel">
-            <!-- function功能區塊 start-->
-            <div class="function">
-              <ul>
-                <li class="back"><a href="javascript:history.back()">回上一頁</a></li>
-                <li class="print"><a href="#">友善列印</a></li>
-                <li class="forward"><a href="#">轉寄友人</a></li>
-              </ul>
+            <!-- function_panel -->
+            <div class="function_panel">
+              <!-- function功能區塊 start-->
+              <div class="function">
+                <ul>
+                  <li class="back"><a href="javascript:history.back()">回上一頁</a></li>
+                  <li class="print"><a href="#">友善列印</a></li>
+                  <li class="forward"><a href="#">轉寄友人</a></li>
+                </ul>
+              </div>
+              <!-- 社群分享 -->
+              <div class="share">
+                <ul>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_line.svg" alt="line" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_rss.svg" alt="RSS" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk" /></a>
+                  </li>
+                </ul>
+              </div>
+              <!-- function功能區塊 end-->
             </div>
-            <!-- 社群分享 -->
-            <div class="share">
-              <ul>
-                <li>
-                  <a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_line.svg" alt="line" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_rss.svg" alt="RSS" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk" /></a>
-                </li>
-              </ul>
-            </div>
-            <!-- function功能區塊 end-->
-          </div>
-          <!-- function_panel -->
+            <!-- function_panel -->
 
-            <!-- LP Start -->
-            <section class="lp">
+            <!-- CP Start -->
+            <section class="cp">
               <!-- category -->
-              <!-- <div class="category">
+              <div class="category">
                 <ul>
                   <li><a href="#" class="active">中文法規</a></li>
                   <li><a href="#">英文法規</a></li>
                 </ul>
-              </div> -->
+              </div>
               <!-- category end-->
-              <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-                <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+              <ul class="publish_info">
+                <li>法規類別：法規</li>
+                <li>公告日期：2015-12-04</li>
               </ul>
-            </div>
-            <!-- Pagination end-->
-            <!-- 圖文列表 start -->
-            <div class="pictext_list_block">
-              <!-- 1 -->
+              <h3>公告「生物相似性單株抗體藥品查驗登記基準」</h3>
+              <p>
+                人體生物資料庫管理條例<br />
+                中華民國99年2月3日<br />
+                華總一義字第09900022481號<br />
+                第 一 章 總則<br />
+                第 1 條 為規範人體生物資料庫（以下稱生物資料庫）之設置、管理及運用，保障生物資料庫參與者之權益，促進醫學發展，增進人民健康福祉，特制定本條例。<br />
+                第 2 條 本條例所稱主管機關，為行政院衛生署。
+              </p>
+
+              <!-- weblink 外部連結 -->
+              <div class="web_link2">
+                <h3>相關連結</h3>
+                <!-- 圖文列表 start -->
+                <div class="pictext_list_block">
+                  <!-- 1 -->
               <div class="pictext_list">
-                <a href="cp.htm">
+                <a href="#">
                 <div class="content">
                   <!-- doc_release star-->
                   <div class="doc_release">
@@ -298,7 +281,7 @@
               </div>
               <!-- 2 -->
               <div class="pictext_list">
-                <a href="cp.htm">
+                <a href="#">
                 <div class="content">
                   <div class="doc_release">
                     <ul>
@@ -328,79 +311,11 @@
                 </div>
                 </a>
               </div>
-              <!-- 4 -->
-              <div class="pictext_list">
-                <a href="#">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
                 </div>
-                </a>
+                <!-- 圖文列表 end -->
               </div>
-              <!-- 5 -->
-              <div class="pictext_list">
-                <a href="#">
-                <div class="content">
-                  <!-- doc_release star-->
-                  <div class="doc_release">
-                    <ul>
-                      <li><span class="th_title">公布日期：</span><span>2023-11-13</span></li>
-                      <li><span class="th_title">次分類：</span><span><em class="tag">藥政管理</em></span></li>
-                      <li><span class="th_title">文號：</span><span>衛授食字第1121411949號</span></li>
-                      <li><span class="th_title">主旨：</span>修正「藥物回收處理辦法」，名稱並修正為「藥品回收處理辦法」及修正「藥事法施行細則」第三十七條，業經本部於中華民國112年10月20日以衛授食字第1121410884號及衛授食字第1121410885號令修正發布，請查照(並轉知所屬)。</span></li>
-                    </ul>
-                  </div>
-                   <!-- doc_release end-->
-                </div>
-              </div>
-              </a>
-            </div>
-            <!-- 圖文列表 end -->
-                        <!-- Pagination -->
-            <div class="pagination">
-              <form action="">
-                <div class="form_inline">
-                  <div class="total">
-                    共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示
-                    <select name="" id="" aria-label="每頁顯示">
-                      <option value="">10</option>
-                      <option value="">20</option>
-                      <option value="">30</option>
-                      <option value="">40</option>
-                    </select>
-                    筆， <input type="button" value="確定" class="btn btn-submit" />
-                  </div>
-                </div>
-              </form>
-              <ul class="page">
-                <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
-                <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li class="next"><a href="#" title="下一頁">下一頁 </a></li>
-                <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
-              </ul>
-            </div>
-            <!-- Pagination end-->
             </section>
-            <!-- LP End -->
-
+            <!-- CP End -->
           </div>
         </div>
       </div>
