--- a/index.htm
+++ b/index.htm
@@ -133,6 +133,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>最新法規資訊內容頁</td>
+              <td><a href="cp3.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>綜合查詢</td>
               <td><a href="search.htm"></a></td>
             </tr>
