--- a/lp_list.htm
+++ b/lp_list.htm
@@ -242,6 +242,8 @@
                   <li><a href="#" class="active">全部</a></li>
                   <li><a href="#">藥品</a></li>
                   <li><a href="#">醫療器材</a></li>
+                  <li><a href="#">中文法規</a></li>
+                  <li><a href="#">英文法規</a></li>
                 </ul>
               </div>
               <!-- category end-->
@@ -283,13 +285,13 @@
               <div class="list">
                 <ul>
                   <li>
-                    <a href="#">
+                    <a href="cp3.htm">
                       <span class="num">1</span><span class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起施行，請查照並轉知所屬會員。<em class="new">最新</em></span
                       ><time>113-01-17</time>
                     </a>
                   </li>
                   <li>
-                    <a href="#"> <span class="num">2</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
+                    <a href="cp3.htm"> <span class="num">2</span><span class="title">函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span><time>113-01-17</time> </a>
                   </li>
                   <li>
                     <a href="#"> <span class="num">3</span><span class="title">有關公告修訂「生體相等性試驗之受託研究機構管理規範」一案，請至本署網站之「公告資訊」下載，請查照並轉知所屬會員及相關單位。</span><time>113-01-17</time> </a>
