--- a/mp.htm
+++ b/mp.htm
@@ -87,7 +87,7 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">藥品</a>
+                <a href="lp.htm">藥品</a>
                 <ul>
                   <li><a href="#">第二層選單</a></li>
                   <li>
@@ -105,13 +105,13 @@
                 <a href="#">醫療器材</a>
               </li>
               <li>
-                <a href="#">綜合查詢</a>
+                <a href="search.htm">綜合查詢</a>
               </li>
               <li>
-                <a href="#">電子報訂閱/取消</a>
+                <a href="epaper_form.htm">電子報訂閱/取消</a>
               </li>
               <li>
-                <a href="#">藥品成分公告查詢</a>
+                <a href="mp2.htm">藥品成分公告查詢</a>
               </li>
             </ul>
           </nav>
@@ -138,8 +138,8 @@
                 <div class="form_grp">
                   <label for="mustSameAsId">綜合查詢</label>
                   <input name="username" id="mustSameAsId" type="text" placeholder="請輸入關鍵字" accesskey="S" title="請輸入文字" aria-label="搜尋網站內容" class="txtinput" />
-                  <input name="" type="submit" value="查詢" class="btn btn-search" />
-                  <input name="" type="submit" value="進階查詢" class="btn btn-search" />
+                  <input name="" type="submit" value="查詢" class="btn btn-search" onclick="window.location.href='search_detail.htm';" />
+                  <input name="" type="submit" value="進階查詢" class="btn btn-search" onclick="window.location.href='search.htm';" />
                 </div>
               </div>
               <!-- Search end -->
@@ -166,7 +166,7 @@
                         <div class="col">
                           <ul>
                             <li>
-                              <a href="#" id="">
+                              <a href="cp3.htm" id="">
                                 <time>112-09-26</time>
                                 <div class="title">為持續推動藥品電子仿單，本署訂定「藥品採用電子仿單辦理原則」（如附件），自函告日起 ...</div>
                               </a>
@@ -196,7 +196,7 @@
                               </a>
                             </li>
                           </ul>
-                          <div class="c_indexMore"><a href="#">更多</a></div>
+                          <div class="c_indexMore"><a href="lp_list.htm">更多</a></div>
                         </div>
                       </div>
                     </div>
@@ -295,7 +295,7 @@
           <div class="container">
             <div class="col">
               <div class="sub_epaper">
-                <a href="#">
+                <a href="epaper_form.htm">
                   <div class="h2title">訂閱電子報</div>
                 </a>
               </div>
