--- a/cp3.htm
+++ b/cp3.htm
@@ -85,23 +85,31 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">藥品</a>
-                <!-- <ul>
+                <a href="lp.htm">藥品</a>
+                <ul>
+                  <li><a href="#">第二層選單</a></li>
+                  <li>
+                    <a href="#">第二層選單</a>
+                    <ul>
+                      <li><a href="#">第三層選單</a></li>
+                      <li><a href="#">第三層選單</a></li>
+                    </ul>
+                  </li>
                   <li><a href="#">第二層選單</a></li>
                   <li><a href="#">第二層選單</a></li>
-                </ul> -->
+                </ul>
               </li>
               <li>
                 <a href="#">醫療器材</a>
               </li>
               <li>
-                <a href="#">綜合查詢</a>
+                <a href="search.htm">綜合查詢</a>
               </li>
               <li>
-                <a href="#">電子報訂閱/取消</a>
+                <a href="epaper_form.htm">電子報訂閱/取消</a>
               </li>
               <li>
-                <a href="#">藥品成分公告查詢</a>
+                <a href="mp2.htm">藥品成分公告查詢</a>
               </li>
             </ul>
           </nav>
@@ -122,7 +130,8 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="#">首頁</a></li>
-            <li>藥品</li>
+            <li><a href="#">藥品</a></li>
+            <li>最新法規資訊</li>
           </ul>
         </div>
         <!-- breadcrumb路徑 end-->
@@ -186,7 +195,7 @@
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <h2 class="title">藥品</h2>
+            <h2 class="title">最新法規資訊</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
