--- a/np.htm
+++ b/np.htm
@@ -85,23 +85,31 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">藥品</a>
-                <!-- <ul>
+                <a href="lp.htm">藥品</a>
+                <ul>
+                  <li><a href="#">第二層選單</a></li>
+                  <li>
+                    <a href="#">第二層選單</a>
+                    <ul>
+                      <li><a href="#">第三層選單</a></li>
+                      <li><a href="#">第三層選單</a></li>
+                    </ul>
+                  </li>
                   <li><a href="#">第二層選單</a></li>
                   <li><a href="#">第二層選單</a></li>
-                </ul> -->
+                </ul>
               </li>
               <li>
                 <a href="#">醫療器材</a>
               </li>
               <li>
-                <a href="#">綜合查詢</a>
+                <a href="search.htm">綜合查詢</a>
               </li>
               <li>
-                <a href="#">電子報訂閱/取消</a>
+                <a href="epaper_form.htm">電子報訂閱/取消</a>
               </li>
               <li>
-                <a href="#">藥品成分公告查詢</a>
+                <a href="mp2.htm">藥品成分公告查詢</a>
               </li>
             </ul>
           </nav>
