--- a/cp.htm
+++ b/cp.htm
@@ -136,6 +136,7 @@
         </div>
         <!-- breadcrumb路徑 end-->
         <div class="container">
+          <div class="nodemenu_btn"><a href="javascript:;">節點連結</a></div>
           <!-- 左側 -->
           <div class="left_block">
             <div class="leftblock_nodemenu">
