--- a/mp2.htm
+++ b/mp2.htm
@@ -87,10 +87,10 @@
           <nav class="menu" role="navigation" aria-label="Header的導航列">
             <ul>
               <li>
-                <a href="#">系統簡介</a>
+                <a href="mp2.htm">系統簡介</a>
               </li>
               <li>
-                <a href="#">綜合查詢</a>
+                <a href="search.htm">綜合查詢</a>
               </li>
             </ul>
           </nav>
@@ -117,8 +117,8 @@
                 <div class="form_grp">
                   <label for="mustSameAsId">綜合查詢</label>
                   <input name="username" id="mustSameAsId" type="text" placeholder="請輸入關鍵字" accesskey="S" title="請輸入文字" aria-label="搜尋網站內容" class="txtinput" />
-                  <input name="" type="submit" value="查詢" class="btn btn-search" />
-                  <input name="" type="submit" value="進階查詢" class="btn btn-search" />
+                  <input name="" type="submit" value="查詢" class="btn btn-search" onclick="window.location.href='search_detail.htm';" />
+                  <input name="" type="submit" value="進階查詢" class="btn btn-search" onclick="window.location.href='search.htm';" />
                 </div>
               </div>
               <!-- Search end -->
