--- a/cp3.htm
+++ b/cp3.htm
@@ -266,6 +266,43 @@
                 第 2 條 本條例所稱主管機關，為行政院衛生署。
               </p>
 
+              <!-- file download 檔案下載 -->
+              <div class="file_download">
+                <h3>附件下載</h3>
+                <ul>
+                  <li>
+                    <span class="file_name">研習課程報名表（doc, docx）</span>
+                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB</span>
+                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB</span>
+                    <!-- <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">研習課程報名表（odt格式轉換）</span>
+                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span>
+                    <!-- <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB</span>
+                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB</span>
+                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB</span>
+                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">課程內容簡介（PDF）</span>
+                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                    <!-- <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
+                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span> -->
+                  </li>
+                  <li>
+                    <span class="file_name">檔案名稱</span>
+                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB</span>
+                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB</span>
+                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB</span>
+                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB</span>
+                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB</span>
+                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB</span>
+                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB</span>
+                  </li>
+                </ul>
+              </div>
               <!-- weblink 外部連結 -->
               <div class="web_link2">
                 <h3>相關連結</h3>
@@ -273,7 +310,7 @@
                 <div class="pictext_list_block">
                   <!-- 1 -->
               <div class="pictext_list">
-                <a href="#">
+                <a href="cp.htm">
                 <div class="content">
                   <!-- doc_release star-->
                   <div class="doc_release">
@@ -290,7 +327,7 @@
               </div>
               <!-- 2 -->
               <div class="pictext_list">
-                <a href="#">
+                <a href="cp.htm">
                 <div class="content">
                   <div class="doc_release">
                     <ul>
@@ -305,7 +342,7 @@
               </div>
               <!-- 3 -->
               <div class="pictext_list">
-                <a href="#">
+                <a href="cp.htm">
                 <div class="content">
                   <!-- doc_release star-->
                   <div class="doc_release">
