--- a/cp.htm
+++ b/cp.htm
@@ -196,7 +196,7 @@
           </div>
           <!-- 主要內容區 -->
           <div class="center_block">
-            <h2 class="title">3D列印技術 帶動高端醫材創新</h2>
+            <h2 class="title">公告內容</h2>
             <!-- function_panel -->
             <div class="function_panel">
               <!-- function功能區塊 start-->
@@ -254,255 +254,67 @@
               </div>
               <!-- category end-->
               <ul class="publish_info">
-                <li>發文/公佈日期：2023-11-13</li>
-                <li>發文文號：衛授食字第1121411949號</li>
+                <li>發文/公佈日期：113年01月11日</li>
+                <li>發文文號：衛授食字第1131400002號</li>
                 <li>分類：藥政管理</li>
                 <li>文件類別：函</li>
-                <li>點閱次數：999</li>
               </ul>
-              <figure class="pic float_left">
-                <!-- 此範例為4:3比例 -->
-                <img src="images/pic05.jpg" alt="圖片說明" />
-                <figcaption>圖說</figcaption>
-              </figure>
               <p>
                 主旨：<br />
-                有關羊膜異體移植物基質(羊膜注射劑型)產品之管理規範，請查照並轉知所屬會員、所轄藥商與醫療機構依循辦理。
+                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
+              </p>
+              <p>
+                依據：<br />
+                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
               </p>
               <p>
                 說明：<br />
-                一、為強化羊膜異體移植物基質(羊膜注射劑型)產品之管理，並鑒於國際間針對該類產品之管理方式不同，本部採分階段推動強化管理措施。<br />
-                二、分階段強化管理措施如下：<br />
-                (一)於全球首張十大醫藥先進國藥品(生物製劑)許可證核准前，給予緩衝期，羊膜異體移植物基質(羊膜注射劑型)產品比照人體組織物管理，應符合人體器官保存庫管理辦法。<br />
-                (二)緩衝期之後，羊膜異體移植物基質產品需申請生物藥品查驗登記，未取得藥品許可證，不得製造或輸入。<br />
-                (三)建議業者於緩衝期間於國內執行臨床試驗，並注意藥品查驗登記相關規定，如有藥品臨床試驗及查驗登記相關技術性問題，可向財團法人醫藥品查驗中心申請諮詢輔導。<br />
-                三、有關羊膜異體移植物基質產品之臨床使用，須經醫師專業判斷後施行，且不得以不當之內容廣告，違者依藥事法第69條及醫療法第86條規定處辦。
-              </p>
-              <ul>
-                <li>臨床試驗計畫書審查時，主要著重於確保受試者參與試驗設計良好的臨床試驗，使用具有品質管控的藥品，試驗的過程中，能有足夠的安全性監測與保護措施，以保障受試者的權益。</li>
-                <li>
-                  藥品生體可用率/生體相等性試驗計畫書及報告書審查需評估（1）執行該生體相等性試驗之目的與對照品選擇之合適性；（2）比較試驗藥品與對照藥品之化學、製造與管制基本資料；（3）試驗設計合理性；（4）統計分析方法；試驗報告書另包含（1）檢品含量分析方法確效；（2）試驗檢品分析；（3）試驗統計結果。
-                </li>
-                <li>銜接性試驗評估乃藉由藥品之藥動／藥效學或療效、安全資訊，輔以比較東亞族群(例如台灣)與非東亞族群的數據，評估國外臨床試驗數據是否能外推至我國，以利評估我國病患之用法用量的合理性。</li>
-                <li>
-                  新藥查驗登記的技術性資料評估重點著重於（1）化學、製造與管制的資料能顯示藥品的原料藥與製劑品質有良好的控管，於不同批次之間，具有穩定的品質一致性；（2）動物的藥理與毒理資料能支持藥品的作用機制，可完整評估可能的潛在毒性反應；（3）由動物與人體的藥動／藥效學資料可了解藥品基本藥動／藥效學特性，且由藥品於特殊族群的藥動學資訊，與其他藥品的交互作用資訊，有利於評估藥品的於特殊族群及與其他藥品合併使用時，用法用量調整的合理性；（4）人體試驗的結果能顯示藥品於宣稱適應症的族群具有可信的療效、與可接受的安全性，以支持宣稱用法用量的合理性。
-                </li>
-              </ul>
-              <p>最新公告請至<a href="#">台灣藥物法規資訊網>綜合查詢</a>查詢。</p>
-              <h2>標題二</h2>
-              <figure class="pic float_right">
-                <!-- 此範例為4:3比例 -->
-                <img src="images/demo/01.jpg" alt="圖片說明" />
-                <figcaption>圖說</figcaption>
-              </figure>
-              <p>
-                <a href="#">連結文字樣式</a
-                >大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。
-              </p>
-              <h3>標題三</h3>
-
-              <p>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</p>
-
-              <h4>標題四</h4>
-              <img src="images/pic05.jpg" alt="圖片說明" class="float_left" />
-
-              <p>
-                <a href="#">連結文字樣式 </a
-                >大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。
-              </p>
-              <h5>標題五</h5>
-
-              <p>
-                <a href="#">連結文字樣式</a
-                >大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。
+                「植物藥新藥查驗登記審查基準」業經本部113年1月11日衛授食字第1121413324號公告修正，請查照並轉知所屬會員。
               </p>
 
-              <h6>標題六</h6>
-
-              <img src="images/demo/04.jpg" alt="圖片說明" class="float_right" />
-              <p>
-                <a href="#">連結文字樣式</a
-                >大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。
-              </p>
-
-              <h3>列表樣式</h3>
-              <p>
-                <a href="#">連結文字樣式 </a
-                >藥品上市前的審查，包含了臨床試驗階段的試驗計畫書審查、藥品生體可用率試驗計畫書及報告審查、銜接性試驗評估與申請上市的藥品查驗登記。其中藥品查驗登記又可分為新藥查驗登記審查、學名藥查驗登記審查、符合指示藥品審查基準之藥品查驗登記審查及原料藥查驗登記審查。為確保民眾用藥安全，本中心針對具安全性考量(如有重大已知風險或潛在風險)的藥品進行風險管理計畫書及追蹤報告審查。此外，為提升國內製劑使用的原料藥品質管理，本中心亦協助衛生福利部食品藥物管理署進行原料藥主檔案之技術性資料評估。
-              </p>
-
-              <p>
-                <a href="#">連結文字樣式 </a
-                >藥品上市前的審查，包含了臨床試驗階段的試驗計畫書審查、藥品生體可用率試驗計畫書及報告審查、銜接性試驗評估與申請上市的藥品查驗登記。其中藥品查驗登記又可分為新藥查驗登記審查、學名藥查驗登記審查、符合指示藥品審查基準之藥品查驗登記審查及原料藥查驗登記審查。為確保民眾用藥安全，本中心針對具安全性考量(如有重大已知風險或潛在風險)的藥品進行風險管理計畫書及追蹤報告審查。此外，為提升國內製劑使用的原料藥品質管理，本中心亦協助衛生福利部食品藥物管理署進行原料藥主檔案之技術性資料評估。
-              </p>
-              <img src="images/pic04.jpg" alt="圖片說明" />
-
-              <table>
-                <!-- 無障礙表格必須帶有標題 <caption> -->
-                <caption>
-                  表格標題
-                  <!-- 若表格內容複雜，可以補充摘要(summary)來加強說明表格內容，但 內容不要與標題重複 -->
-                  <span class="summary">表格摘要</span>
-                </caption>
-                <tr>
-                  <th scope="col">案件狀態</th>
-                  <th scope="col">受文者</th>
-                  <th scope="col">收件地址</th>
-                </tr>
-                <tr>
-                  <td>新申請案/申復案</td>
-                  <td>衛生福利部食品藥物管理署</td>
-                  <td>
-                    (A) 國家生技園區F棟<br />
-                    (地址：11571台北市南港區研究院路一段130巷99號)；或<br />
-
-                    (B) 衛生福利部食品藥物管理署聯合服務中心<br />
-
-                    (地址：11561台北市南港區昆陽街161號)
-                  </td>
-                </tr>
-              </table>
-              <blockquote>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。</blockquote>
-              <ul>
-                <li>影開兒中不們西動會味理化由子常洲國有標題</li>
-                <li>首動我行得流事個要使著獨操大</li>
-                <li>推列黃上道有畫走長市上</li>
-                <li>證會不就人推陸跑公片重</li>
-                <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
-              </ul>
-              <ol>
-                <li>影開兒中不們西動會味理化由子常洲國有標題</li>
-                <li>首動我行得流事個要使著獨操大</li>
-                <li>推列黃上道有畫走長市上</li>
-                <li>證會不就人推陸跑公片重</li>
-                <li>處來在山工國生即工球一，易心個長什去實用當們公有也候</li>
-              </ol>
-
-              <h3>表格樣式</h3>
-              <table>
-                <!-- 無障礙表格必須帶有標題 <caption> -->
-                <caption>
-                  表格標題
-                  <!-- 若表格內容複雜，可以補充摘要(summary)來加強說明表格內容，但 內容不要與標題重複 -->
-                  <span class="summary">表格摘要</span>
-                </caption>
-                <tr>
-                  <th scope="col">th 1</th>
-                  <th scope="col">th 2</th>
-                  <th scope="col">th 3</th>
-                  <th scope="col">th 4</th>
-                  <th scope="col">th 5</th>
-                  <th scope="col">th 6</th>
-                </tr>
-                <tr>
-                  <th scope="row">th A</th>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                </tr>
-                <tr>
-                  <th scope="row">th B</th>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                </tr>
-                <tr>
-                  <th scope="row">th C</th>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                  <td>td 資料</td>
-                </tr>
-              </table>
-
-              <!-- fanybox cppic_slider lightbox_slider-->
-              <div class="lightbox_slider_block">
-                <h3>相關圖檔</h3>
-                <div class="cppic_slider">
-                  <div class="img-container">
-                    <a href="images/demo/06.jpg" data-fancybox="images" data-caption="第1張圖說">
-                      <img src="images/demo/06.jpg" alt="" />
-                      <noscript><img src="images/demo/06.jpg" alt="" /></noscript>
-                      <span class="caption">第1張圖說</span>
+              <!-- weblink 外部連結 -->
+              <div class="web_link2">
+                <h3>相關公告連結</h3>
+                <!-- 圖文列表 start -->
+                <div class="pictext_list_block">
+                  <!-- 1 -->
+                  <div class="pictext_list">
+                    <a href="cp.htm">
+                      <div class="content">
+                        <!-- doc_release star-->
+                        <div class="doc_release">
+                          <ul>
+                            <li><span class="th_title">發文/公佈日期：</span><span>112年09月23日</span></li>
+                            <li><span class="th_title">發文文號：</span><span>FDA藥字第1121408208號</span></li>
+                          </ul>
+                        </div>
+                        <!-- doc_release end-->
+                      </div>
                     </a>
                   </div>
-                  <div class="img-container">
-                    <a href="images/demo/07.jpg" data-fancybox="images" data-caption="第2張圖說">
-                      <img src="images/demo/07.jpg" alt="" />
-                      <noscript><img src="images/demo/07.jpg" alt="" /></noscript>
-                      <span class="caption">第2張圖說</span>
-                    </a>
-                  </div>
-                  <div class="img-container">
-                    <a href="images/demo/08.jpg" data-fancybox="images" data-caption="第3張圖說">
-                      <img src="images/demo/08.jpg" alt="" />
-                      <noscript><img src="images/demo/08.jpg" alt="" /></noscript>
-                      <span class="caption">第3張圖說</span>
-                    </a>
-                  </div>
-                  <div class="img-container">
-                    <a href="images/demo/10.jpg" data-fancybox="images" data-caption="第4張圖說">
-                      <img src="images/demo/10.jpg" alt="" />
-                      <noscript><img src="images/demo/10.jpg" alt="" /></noscript>
-                      <span class="caption">第4張圖說</span>
-                    </a>
-                  </div>
-                  <div class="img-container">
-                    <a href="images/demo/12.jpg" data-fancybox="images" data-caption="第5張圖說">
-                      <img src="images/demo/12.jpg" alt="" />
-                      <noscript><img src="images/demo/12.jpg" alt="" /></noscript>
-                      <span class="caption">第5張圖說</span>
+                  <!-- 2 -->
+                  <div class="pictext_list">
+                    <a href="cp.htm">
+                      <div class="content">
+                        <div class="doc_release">
+                          <ul>
+                            <li><span class="th_title">發文/公佈日期：</span><span>112年09月23日</span></li>
+                            <li><span class="th_title">發文文號：</span><span>FDA藥字第1121408208號</span></li>
+                          </ul>
+                        </div>
+                      </div>
                     </a>
                   </div>
                 </div>
-              </div>
-              <!-- weblink 外部連結 -->
-              <div class="web_link">
-                <h3>相關連結</h3>
-                <ol>
-                  <li><a href="javscript:;">台灣藥物法規資訊網>綜合查詢</a></li>
-                  <li><a href="javscript:;">財團法人醫藥品查驗中心 臨床試驗案送件窗口</a></li>
-                </ol>
+                <!-- 圖文列表 end -->
               </div>
               <!-- file download 檔案下載 -->
               <div class="file_download">
-                <h3>附件下載</h3>
+                <h3>公告影像檔</h3>
                 <ul>
                   <li>
-                    <span class="file_name">研習課程報名表（doc, docx）</span>
-                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB</span>
-                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB</span>
-                    <!-- <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span> -->
-                  </li>
-                  <li>
-                    <span class="file_name">研習課程報名表（odt格式轉換）</span>
-                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span>
-                    <!-- <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB</span>
-                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB</span>
-                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB</span>
-                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB</span> -->
-                  </li>
-                  <li>
-                    <span class="file_name">課程內容簡介（PDF）</span>
+                    <span class="file_name">1131400002_附件.pdf</span>
                     <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
-                    <!-- <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
-                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span> -->
-                  </li>
-                  <li>
-                    <span class="file_name">檔案名稱</span>
-                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
-                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB</span>
-                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB</span>
-                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB</span>
-                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB</span>
-                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB</span>
-                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB</span>
-                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB</span>
                   </li>
                 </ul>
               </div>
