--- a/cp.htm
+++ b/cp.htm
@@ -285,23 +285,15 @@
                         <div class="doc_release">
                           <ul>
                             <li><span class="th_title">發文/公佈日期：</span><span>112年09月23日</span></li>
+                            <li>
+                              <span class="th_title">分類：</span><span><em class="tag">藥品查驗登記</em></span>
+                            </li>
+                            <li><span class="th_title">文件類別：</span><span>函</span></li>
                             <li><span class="th_title">發文文號：</span><span>FDA藥字第1121408208號</span></li>
+                            <li><span class="th_title">主旨：</span><span>函知「植物藥新藥查驗登記審查基準」修訂草案，惠請貴會協助轉知所屬會員，如有修正意見者，請於文到60日內來函陳述，請查照。</span></li>
                           </ul>
                         </div>
                         <!-- doc_release end-->
-                      </div>
-                    </a>
-                  </div>
-                  <!-- 2 -->
-                  <div class="pictext_list">
-                    <a href="cp.htm">
-                      <div class="content">
-                        <div class="doc_release">
-                          <ul>
-                            <li><span class="th_title">發文/公佈日期：</span><span>112年09月23日</span></li>
-                            <li><span class="th_title">發文文號：</span><span>FDA藥字第1121408208號</span></li>
-                          </ul>
-                        </div>
                       </div>
                     </a>
                   </div>
