--- a/index.htm
+++ b/index.htm
@@ -138,6 +138,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>一般內容頁</td>
+              <td><a href="cp_all.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>綜合查詢</td>
               <td><a href="search.htm"></a></td>
             </tr>
