--- a/index.htm
+++ b/index.htm
@@ -178,6 +178,11 @@
             </tr>
             <tr>
               <td></td>
+              <td>電子報</td>
+              <td><a href="epaper.htm"></a></td>
+            </tr>
+            <tr>
+              <td></td>
               <td>網站地圖</td>
               <td><a href="sitemap.htm"></a></td>
             </tr>
